--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="sharehands_green_weak">#E7F4E8</color>
+    <color name="sharehands_green_medium">#3AC0A0</color>
+    <color name="sharehands_green_strong">#298267</color>
 </resources>
