--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="sharehands_green_weak">#E7F4E8</color>
     <color name="sharehands_green_medium">#3AC0A0</color>
     <color name="sharehands_green_strong">#298267</color>
+    <color name="background_day">#F5F5F5</color>
+    <color name="icon_unfilled">#5F6368</color>
 </resources>
