--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.ShareHands_frontend" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.ShareHands_frontend" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/background_day</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
@@ -13,4 +13,17 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="Theme.ShareHands_frontend.SplashScreen">
+        <item name="android:windowBackground">@drawable/background_splash</item>
+    </style>
+    <style name="Widget.CalendarView.Custom" parent="android:Widget.CalendarView">
+        <item name="android:focusedMonthDateColor">@android:color/holo_blue_light</item>
+        <item name="android:weekNumberColor">@android:color/holo_red_light</item>
+        <item name="android:selectedWeekBackgroundColor">@android:color/holo_blue_light</item>
+        <item name="android:selectedDateVerticalBar">@android:color/holo_blue_light</item>
+        <item name="android:unfocusedMonthDateColor">@android:color/holo_blue_light</item>
+        <item name="android:weekDayTextAppearance">@style/TextAppearance.AppCompat.Medium</item>
+        <item name="android:dateTextAppearance">@style/TextAppearance.AppCompat.Medium</item>
+    </style>
+
 </resources>
