[FEAT] Monthly Calendar 선택 기능 추가

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="sharehands_green_strong">#298267</color>
     <color name="background_day">#F5F5F5</color>
     <color name="icon_unfilled">#5F6368</color>
+    <color name="sharehands_black">#1F2024</color>
 </resources>
