--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -14,5 +14,5 @@
     <color name="icon_unfilled">#5F6368</color>
     <color name="sharehands_black">#1F2024</color>
     <color name="sharehands_gray">#D9D9D9</color>
-    <color name="text_color">#0E0E0E</color>
+    <color name="text_color">#FAFAFA</color>
 </resources>
