--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -15,4 +15,5 @@
     <color name="sharehands_black">#1F2024</color>
     <color name="sharehands_gray">#D9D9D9</color>
     <color name="text_color">#FAFAFA</color>
+    <color name="item_color">#1F2024</color>
 </resources>
