--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -28,4 +28,7 @@
         <item name="android:weekNumberColor">@android:color/holo_red_light</item>
         <item name="android:textStyle">bold</item>
     </style>
+    <style name="CustomToolbarStyle" parent="Widget.AppCompat.Toolbar">
+        <item name="android:gravity">center</item>
+    </style>
 </resources>
